try to use visibility instead of pointer-events to see if it helps with macos issue (#278)

--- a/src/styles.css
+++ b/src/styles.css
@@ -59,9 +59,9 @@
   width: 100vw;
   height: 100vh;
   z-index: 999;
-  pointer-events: none;
+  visibility: hidden;
   &.active {
-    pointer-events: auto;
+    visibility: visible;
   }
   & canvas {
     position: absolute;
